fix: landing view widgets z-index

--- a/src/components/hotel-view/HotelView.scss
+++ b/src/components/hotel-view/HotelView.scss
@@ -199,7 +199,7 @@
 	}
 
 	.landing-widgets {
-		z-index: 9;
+		z-index: 200;
 		position: relative;
 
 	}
